@@ -1,0 +1,3 @@
+Mikael Hallendal <micke@imendio.com>
+Richard Hult <richard@imendio.com>
+
