@@ -1,3 +1,7 @@
+2006-01-02  Mikael Hallendal  <micke@imendio.com>
+
+	* MAINTAINERS: Added
+
 2005-12-17  Richard Hult  <richard@imendio.com>
 
 	* Release 0.11.
